# ahorcado

./: README.md  pyproject.toml
data/: words.txt  words_tilde.txt
src/ahorcado/: __init__.py  __main__.py  ahorcado_test.py  words.py
