[project]
name = "ahorcado"
version = "0.1.0"
dependencies = []
readme = "README.md"
requires-python = ">= 3.12.5"

[project.scripts]
"ahorcado" = "ahorcado:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahorcado"]
